# galaxy-integrations-python-api

./: .gitlab-ci.yml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
src/: .readthedocs.yml
src/galaxy/api/: errors.py  importer.py  jsonrpc.py  plugin.py
src/galaxy/unittest/: mock.py
tests/: conftest.py  test_achievements.py  test_authenticate.py  test_chunk_messages.py  test_friends.py  test_game_library_settings.py  test_game_times.py  test_install_game.py  test_internal.py  test_launch_game.py  test_launch_platform_client.py  test_local_games.py  test_local_size.py  test_os_compatibility.py  test_owned_games.py  test_persistent_cache.py  test_refresh_credentials.py  test_shutdown_platform_client.py  test_stream_line_reader.py  test_subscriptions.py  test_uninstall_game.py  test_user_presence.py
